--- a/twiter.html
+++ b/twiter.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouTube</title>
+    <title>Twitter</title>
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-youtube.png" alt="">
-    <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo/playlists" target="_blank">ACESSE</a>
+    <img src="imagens/tela-twitter.jpg" alt="Twitter">
+    <a href="https://twitter.com/cassiofelippi" target="_blank">ACESSE</a>
 </body>
 </html>
